# SO

Fork/: README.md
Fork/source/src/: main.cpp
Trapeze-rule/source/: CMakeLists.txt
Trapeze-rule/source/src/: main.cpp  prog
